force-app/main/default/objects/bpats__ATS_Action_Link__c/bpats__ATS_Action_Link__c.object-meta.xml
<CustomObject>
    <label>ATS Action Link</label>
    <nameField>
        <displayFormat>AAL-{00000}</displayFormat>
        <label>ATS Action Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATS Action Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>