force-app/main/default/objects/bpats__ATS_Action_Link__c/fields/bpats__Action_Links_External_Id__c.field-meta.xml
<CustomField>
    <fullName>bpats__Action_Links_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Action Links External Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>