force-app/main/default/objects/bpats__ATS_Action_Link__c/fields/bpats__ATS_Action__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Action__c</fullName>
    <label>ATS Action</label>
    <referenceTo>bpats__ATS_Action__c</referenceTo>
    <relationshipLabel>ATS Action Links</relationshipLabel>
    <relationshipName>ATS_Action_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>