force-app/main/default/objects/bpats__ATS_Action_Link__c/fields/bpats__ATS_Template_Stage__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Template_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATS Template Stage</label>
    <referenceTo>bpats__ATS_Template_Stage__c</referenceTo>
    <relationshipLabel>ATS Action Links</relationshipLabel>
    <relationshipName>ATS_Action_Links</relationshipName>
    <type>Lookup</type>
</CustomField>