force-app/main/default/objects/bpats__ATS_Action_Link__c/fields/bpats__Is_Optional__c.field-meta.xml
<CustomField>
    <fullName>bpats__Is_Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Optional</label>
    <type>Checkbox</type>
</CustomField>