force-app/main/default/objects/bpats__ATS_Action_Link__c/fields/bpats__Relation_Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Relation_Type__c</fullName>
    <label>Relation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mass Action</fullName>
            </value>
            <value>
                <fullName>Job Board Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>