force-app/main/default/objects/bpats__ATS_Action_Link__c/fields/bpats__Sequence__c.field-meta.xml
<CustomField>
    <fullName>bpats__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>