force-app/main/default/objects/bpats__ATS_Action_Link__c/validationRules/bpats__Must_have_relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>bpats__Must_have_relationship</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(bpats__ATS_Stage__c), ISBLANK(bpats__ATS_Template_Stage__c), ISBLANK(bpats__ATS_Template__c))</errorConditionFormula>
    <errorMessage>Please relate this record to the ATS Stage or ATS Template Stage or ATS Template. This object uses dynamic forms to view only one field at a time - if you&apos;re unsure why this message is appearing, you may adjust the filters on the lightning page layout.</errorMessage>
</ValidationRule>